o11y 도구를 위한 Dockerfile 및 관련 Go 파일 추가, docker-compose.yml에 서비스 추가

--- a/Agents/RCA/React_Single_Agent_Pattern/docker-compose.yml
+++ b/Agents/RCA/React_Single_Agent_Pattern/docker-compose.yml
@@ -185,6 +185,16 @@ services:
     networks:
       shared-network:
 
+  o11y-tool:
+    build:
+      context: ./Tools/o11y
+      dockerfile: Dockerfile
+      no_cache: true
+    container_name: o11y_tool
+    restart: always
+    networks:
+      shared-network:
+
 networks:
   shared-network:
     external: true
