--- a/Agents/RCA/React_Single_Agent_Pattern/Agent/Dockerfile
+++ b/Agents/RCA/React_Single_Agent_Pattern/Agent/Dockerfile
@@ -7,6 +7,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
   
 COPY *.py .
+COPY .env .
+COPY service-account-key.json .
 
 EXPOSE 8089
 
