--- a/Agents/RCA/React_Single_Agent_Pattern/docker-compose.yml
+++ b/Agents/RCA/React_Single_Agent_Pattern/docker-compose.yml
@@ -81,6 +81,7 @@ services:
       - 3090:3000
     environment:
       <<: *langfuse-worker-env
+      HOSTNAME: 0.0.0.0
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:-mysecret} # CHANGEME
       LANGFUSE_INIT_ORG_ID: ${LANGFUSE_INIT_ORG_ID:-}
       LANGFUSE_INIT_ORG_NAME: ${LANGFUSE_INIT_ORG_NAME:-}
